# django_cw

./: .env  .env.example  .gitignore  Django-cw.postman_collection.json  Dockerfile  docker-compose.yml  pyproject.toml
apps/auth/: serializers.py  urls.py  views.py
apps/auto_parks/: urls.py  views.py
apps/auto_parks/migrations/: 0001_initial.py
apps/car_dealerships/: apps.py
apps/cars/: filter.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/cars/choices/: body_type_choices.py  status_choices.py  transmission_choices.py
apps/cars/migrations/: 0001_initial.py  0002_alter_carmodel_options_alter_carmodel_brand_and_more.py  0002_carmodel_created_at_carmodel_updated_at.py  0002_carmodel_photo.py  0002_carmodel_user.py  0003_alter_carmodel_options_alter_carmodel_brand_and_more.py  0003_carmodel_body_type.py  0003_carprofileview.py  0004_carmodel_body_type.py  (+6 more)
apps/dealerships/: models.py  serializers.py  urls.py  views.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
backend/configs/: celery.py  routing.py  settings.py  urls.py
backend/core/: models.py  paginations.py
backend/templates/: approve.html  badwords.html  chat_invite.html
cars/: serializers.py  views.py
cars/migrations/: 0001_initial.py
client/: index.html
configs/: settings.py  urls.py
configs/extra_conf/: rest_conf.py
core/enums/: action_token_enum.py  regex_enum.py
core/services/: email_service.py  file_service.py  jwt_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
templates/: test.html  warning.html
(+63 files in other folders)
